--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,14 @@
         "es2021": true,
         "node": true
     },
-    "extends": "airbnb-base",
+    "extends": [
+        "airbnb-base"
+    ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-console": "off",
+        "linebreak-style": "off"
     }
 }
